--- a/application_resources/css/styles.css
+++ b/application_resources/css/styles.css
@@ -1,4 +1,4 @@
- @charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 
 /*------------------------------------------------------------------
@@ -24,11 +24,11 @@
 /* =0. Fonts
 --------------------------------------------------------------------------------------------------------*/
 @font-face {
- font-family: 'fontello';
- src: url('../fonts/fontello1b1b.eot?3837060');
- src: url('../fonts/fontello1b1b.eot?3837060#iefix') format('embedded-opentype'), url('../fonts/fontello1b1b.woff?3837060') format('woff'), url('../fonts/fontello1b1b.ttf?3837060') format('truetype'), url('../fonts/fontello1b1b.svg?3837060#fontello') format('svg');
- font-weight: normal;
- font-style: normal;
+    font-family: 'fontello';
+    src: url('../fonts/fontello1b1b.eot?3837060');
+    src: url('../fonts/fontello1b1b.eot?3837060#iefix') format('embedded-opentype'), url('../fonts/fontello1b1b.woff?3837060') format('woff'), url('../fonts/fontello1b1b.ttf?3837060') format('truetype'), url('../fonts/fontello1b1b.svg?3837060#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 /* Chrome hack: SVG is rendered more smooth in Windows. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
@@ -121,12 +121,12 @@ pre { padding:0 30px 25px 30px; border:1px dotted #3e3e3e; margin-top:10px; marg
 --------------------------------------------------------------------------------------------------------*/
 h1#logo { display:block; position:relative; float:left }
 h1#logo a { display: block;
-background: url(../images/bg-logo.png) center no-repeat;
-background-size: 75px 75px;
-width: 75px;
-height: 100px;
-margin-top: -23px;
-background-color: white;}
+            background: url(../images/bg-logo.png) center no-repeat;
+            background-size: 75px 75px;
+            width: 75px;
+            height: 100px;
+            margin-top: -23px;
+            background-color: white;}
 .tagline { float:left; font-family:"Open Sans", Arial, Helvetica, sans-serif; font-size:12px; font-weight:400; padding:0 0 0 16px; margin:0px auto; position:relative; display:block; height:52px; margin-top:-1px; font-style:italic }
 .tagline span { display: block; margin-top: 24%; }
 .hentry h1, h2, h3, h4, h5 { line-height:1.3; color:#2b2b2b; display:block; position:relative; padding-bottom:13px; }
@@ -196,7 +196,14 @@ a h3 span { text-decoration:none !important }
 #header { position:relative; z-index:55; width:100%; min-height:100px; padding:23px 45px;  -webkit-transform: translateZ(0); }
 #content { width:100%; position:relative; z-index:55; height:auto; padding-bottom: 24px; }
 .container { padding:0px; width:1280px; position:relative; margin:0 auto; padding-top:23px; }
-#background-color { background:#f5f5f5; height:100%; width:100%; position:fixed; z-index:1; /*overflow:visible; overflow-x: hidden; overflow-y: scroll;*/ -webkit-overflow-scrolling: touch; top:0; left:0 }
+#background-color { background: #eaa429;
+                    height: 100%;
+                    width: 100%;
+                    position: fixed;
+                    z-index: 1;
+                    -webkit-overflow-scrolling: touch;
+                    top: 0;
+                    left: 0; }
 .oldie #background-color { display:none }
 #header, #content { background: #eaa429; }
 .pushed-left #content, .pushed-left #header, .pushed-left #footer, .pushed-left #background-color { -webkit-transform: translate3d(-200px, 0px, 0px); transform: translate3d(-200px, 0px, 0px); }
